# nergal

./: .coverage  .env.example  .gitignore  CLAUDE.md  Dockerfile  MODULE_STRUCTURE.md  README.md  README_STT.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
database/: init.sql
database/migrations/: 002_add_agent_preferences.sql  003_add_health_metrics.sql  004_add_general_reminders.sql
docs/: AGENTS_TODO.md  AGENT_ARCHITECTURE.md  AGENT_RECOMMENDATIONS.md  ANALYSIS_AND_REFACTORING.md  DEPLOYMENT.md  LLM_PROVIDERS.md  MONITORING.md  REFACTORING_PLAN.md  STT.md  TECHNICAL_REVIEW.md  VOICE_MESSAGES_PLAN.md  WEB_SEARCH_RELIABILITY.md  architecture-guide.md  architecture_guide_to_claw.md  zeroclaw-migration-plan.md  zeroclaw_migration_plan.md
monitoring/: alertmanager.yml  alerts.yml  loki-config.yml  prometheus.yml  promtail-config.yml
monitoring/grafana/dashboards/: nergal-bot-overview.json
monitoring/grafana/provisioning/alerting/: .gitkeep
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
monitoring/grafana/provisioning/notifiers/: .gitkeep
monitoring/grafana/provisioning/plugins/: .gitkeep
scripts/: manage_users.py
src/llm_lib/: __init__.py  base.py  config.py  exceptions.py  factory.py
src/llm_lib/providers/: __init__.py  zai.py
src/nergal/: __init__.py  auth.py  config.py  container.py  exceptions.py  main.py  protocols.py
src/nergal/admin/: __init__.py  server.py
src/nergal/agent/: __init__.py  exceptions.py  loop.py  runtime.py
src/nergal/channels/: __init__.py  base.py  factory.py  telegram.py
src/nergal/database/: __init__.py  connection.py  migrations.py  models.py  repositories.py
src/nergal/dialog/: __init__.py  agent_loader.py  agents.py  base.py  cache.py  cancellation.py  constants.py  context.py  default_agent.py  dispatcher_agent.py  executor.py  manager.py  metadata.py  preferences.py  styles.py  web_search_agent.py
src/nergal/dialog/agents/: __init__.py  analysis_agent.py  base_specialized.py  clarification_agent.py  code_analysis_agent.py  comparison_agent.py  expertise_agent.py  fact_check_agent.py  health_agent.py  knowledge_base_agent.py  metrics_agent.py  news_agent.py  reminder_agent.py  summary_agent.py  tech_docs_agent.py  todoist_agent.py  web_search_agent.py
src/nergal/dispatcher/: __init__.py  base.py  native.py  xml.py
src/nergal/handlers/: __init__.py  commands.py  messages.py
src/nergal/integrations/: __init__.py  todoist.py
src/nergal/llm/: __init__.py  base.py  factory.py
src/nergal/llm/providers/: __init__.py  zai.py
src/nergal/memory/: __init__.py  base.py  chunker.py  exceptions.py  extraction.py  rag.py  service.py  sqlite.py
src/nergal/monitoring/: __init__.py  health.py  logging_config.py  metrics.py
src/nergal/security/: __init__.py  approval.py  policy.py
src/nergal/services/: __init__.py  reminder_service.py
src/nergal/skills/: __init__.py  base.py  loader.py  prompt.py
src/nergal/stt/: __init__.py  audio_utils.py  base.py  factory.py
src/nergal/stt/providers/: __init__.py  local_whisper.py
src/nergal/tools/: __init__.py  base.py  exceptions.py  registry.py
src/nergal/tools/files/: __init__.py  read.py  write.py
src/nergal/tools/http/: __init__.py  request.py
src/nergal/tools/memory/: __init__.py  recall.py  store.py
src/nergal/tools/search/: __init__.py  web.py
src/nergal/tools/shell/: __init__.py  execute.py
src/nergal/tools/stt/: __init__.py  transcribe.py
src/nergal/utils/: __init__.py  markdown_to_telegram.py
src/nergal/web_search/: __init__.py  base.py  reliability.py  zai_mcp_http.py
src/stt_lib/: __init__.py  audio.py  base.py  config.py  exceptions.py  factory.py
src/stt_lib/providers/: __init__.py  local_whisper.py
src/telegram_handlers_lib/: __init__.py  base.py  factory.py
src/web_search_lib/: __init__.py  base.py  config.py  exceptions.py  factory.py  reliability.py
src/web_search_lib/providers/: __init__.py  zai_mcp_http.py
tests/: __init__.py  conftest.py  test_auth.py
tests/test_agents/: __init__.py  test_base.py  test_dispatcher.py  test_metadata.py  test_specialized_agents.py
tests/test_database/: test_repositories.py
tests/test_dialog/: __init__.py  test_agent_loader.py  test_cache.py  test_cancellation.py  test_execution_context.py  test_manager.py  test_parallel_execution.py  test_preferences.py
tests/test_memory/: test_service.py
tests/test_stt_lib/: __init__.py  conftest.py  test_audio.py  test_base.py  test_config.py  test_exceptions.py  test_factory.py
tests/test_web_search/: __init__.py  test_base.py  test_reliability.py
tests/unit/agent/: __init__.py  test_loop.py  test_runtime.py
tests/unit/channels/: test_base.py  test_factory.py  test_telegram.py
tests/unit/dispatcher/: __init__.py  test_base.py  test_native.py  test_xml.py
tests/unit/security/: test_approval.py  test_policy.py
tests/unit/tools/: __init__.py  test_base.py  test_registry.py  test_transcribe.py
tests/unit/tools/files/: __init__.py  test_read.py  test_write.py
tests/unit/tools/http/: __init__.py  test_request.py
tests/unit/tools/search/: __init__.py  test_web.py
(+2 files in other folders)
