[project]
name = "nergal"
version = "0.1.0"
description = "Telegram AI bot with LLM integration and web search"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "finnetrolle" }
]
keywords = ["telegram", "bot", "llm", "ai", "web-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "python-telegram-bot[job-queue]>=22.0.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "faster-whisper>=1.0.0",
    "pydub>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/finnetrolle/nergal"
Repository = "https://github.com/finnetrolle/nergal"
Issues = "https://github.com/finnetrolle/nergal/issues"

[project.scripts]
bot = "nergal.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nergal"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
