[project]
name = "nergal"
version = "0.1.0"
description = "Telegram AI bot with LLM integration and web search"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "finnetrolle" }
]
keywords = ["telegram", "bot", "llm", "ai", "web-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "python-telegram-bot[job-queue]>=22.0.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "faster-whisper>=1.0.0",
    "pydub>=0.25.0",
    "dependency-injector>=4.41.0",
    "tenacity>=8.0.0",
    "pytz>=2024.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/finnetrolle/nergal"
Repository = "https://github.com/finnetrolle/nergal"
Issues = "https://github.com/finnetrolle/nergal/issues"

[project.scripts]
bot = "nergal.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nergal", "src/stt_lib", "src/web_search_lib"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "telegram.*",
    "httpx.*",
    "whisper.*",
    "faster_whisper.*",
    "pydub.*",
    "mcp.*",
    "dependency_injector.*",
    "pytz.*",
]
ignore_missing_imports = true
